# openalpha

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  INVESTORS.md  LICENSE  PRD.md  README.md  SECURITY.md  railway.toml
.github/ISSUE_TEMPLATE/: add_source.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  api.py  cli.py  pyproject.toml
backend/data-ingestion/: _registry.yaml  substack.py
backend/ingestion/: __init__.py  __main__.py  cli.py  models.py  registry.py  rendering.py
backend/ingestion/extractors/: __init__.py  base.py  manual.py  substack.py  youtube.py
backend/ingestion/processors/: __init__.py  long.py  short.py
backend/scripts/: generate_appearance.py  generate_profile.py  lint_investors.py  post_ingest.py
backend/src/: agent.py  appearance.py  config.py  entity.py  llm.py  loader.py  search.py
backend/src/subagents/: base.py
backend/src/tools/: base.py
backend/tests/: conftest.py  test_api.py  test_ingestion.py  test_search.py
frontend/: package-lock.json  package.json
investors/: _stats.json
investors/apoorv-agrawal/: profile.md
investors/bill-gurley/: profile.md
investors/brad-gerstner/: profile.md
investors/cathie-wood/: profile.md
investors/chamath-palihapitiya/: profile.md
investors/david-friedberg/: profile.md
investors/david-sacks/: profile.md
investors/freda-duan/: profile.md
investors/howard-marks/: profile.md
investors/jamin-ball/: profile.md
prompts/: system.md
templates/: appearance-template.md  profile-template.md  skill-template.md
(+112 files in other folders)
